# depot-butler

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AZURE_DEPLOYMENT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  ONEDRIVE_SETUP.md  README.md  current-template.json  deploy-to-azure.ps1  full-job-config.json  job-config.yaml  main.py  pyproject.toml  setup_onedrive_auth.py  temp-job-config.json  volume-config.yaml
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  quality.yml
data/: processed_editions.json
docs/: ARCHITECTURE_DIAGRAMS.md  BUSINESS_REQUIREMENTS.md  CODE_QUALITY.md  CONFIGURATION.md  COOKIE_AUTHENTICATION.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  DRY_RUN_MODE.md  EMAIL_IPHONE_FIX.md  HTTPX_MIGRATION.md  MASTER_PLAN.md  MONGODB.md  ONEDRIVE_FOLDERS.md  ONEDRIVE_SETUP.md  OPERATIONAL_RUNBOOK.md  PRODUCTION_RUN_CHECKLIST.md  ROADMAP.md  SCRIPT_CLEANUP_PLAN.md  SESSION_STATUS.md  SPRINT3_PLAN.md  SPRINT4_EXAMPLES.md  SPRINT5_COMPLETION_REVIEW.md  SPRINT6_IMPROVEMENTS.md  TESTING.md  TEST_COVERAGE_ANALYSIS.md  TIMEZONE_REMINDERS.md  TROUBLESHOOTING.md  VALIDATION_RESULTS.md  VALIDATION_SETUP.md  architecture.md  copilot-plan.md  decisions.md  ideas.md
docs/archive/: README.md  VALIDATION_RESULTS.md  VALIDATION_SETUP.md
scripts/: README.md  add_recipient_preferences.py  check_cookie_expiration.py  check_edition_status.py  check_mongodb_status.py  check_onedrive_folders.py  check_recipients.py  cleanup_blob_and_editions.py  cleanup_duplicate_publications.py  collect_historical_pdfs.py  convert_onedrive_share_url.py  delete_test_edition.py  deploy-to-azure.ps1  import_from_onedrive.py  init_app_config.py  inspect_aktionaer.py  inspect_edition.py  inspect_subscription_html.py  list_onedrive_folders.py  manage_recipient_preferences.py  migrate_onedrive_organize_to_publications.py  migrate_publications_discovery.py  migrate_recipient_preferences.py  quick_cookie_import.py  rename_onedrive_pdfs.py  reset_archive.py  seed_publications.py  set_custom_onedrive_folder.py  setup_onedrive_auth.py  show_pub_stats.py  sync_web_urls.py  test_archival_setup.py  test_blob_service.py  test_dry_run.py  test_email_encoding.py  test_enhanced_schema.py  test_recipient_filtering.py  test_smtp.py  update_cookie_mongodb.py  update_edition_metadata.py  (+4 more)
scripts/archive/obsolete/: analyze_duplicate_pattern.py  analyze_duplicates.py  analyze_editions.py  analyze_megatrend.py  analyze_onedrive_pdfs.py  check_2019_issues.py  check_all_mongodb.py  check_blob_state.py  check_blob_storage.py  check_early_years.py  check_edition_fields.py  check_edition_metadata.py  check_final_results.py  check_import_results.py  check_mongodb_count.py  cleanup_extra_blobs.py  cleanup_incomplete_editions.py  collect_historical_pdfs.py  delete_last_edition.py  export_unique_editions_csv.py  extract_duplicate_urls.py  final_duplicate_summary.py  final_verification.py  find_duplicate_dates.py  find_extra_blobs.py  find_missing_issues.py  fix_blobs.py  fix_duplicate_filenames.py  fix_onedrive_filename_typos.py  fix_publication_id.py  force_reprocess_edition.py  identify_duplicate_ausgabe_ids.py  identify_duplicate_dates.py  investigate_blob_issues.py  investigate_date_mismatch.py  list_unique_editions.py  map_duplicate_dates.py  migrate_file_paths.py  migrate_onedrive_organize_to_publications.py  reset_and_import_onedrive.py  (+5 more)
scripts/validation/: README.md  setup_prerequisites.py  test_blob_storage.py  test_pdf_parsing.py  test_website_crawl.py  test_yfinance.py
src/depotbutler/: __main__.py  browser_client.py  browser_scraper.py  client.py  discovery.py  edition_tracker.py  exceptions.py  httpx_client.py  mailer.py  main.py  models.py  onedrive.py  publications.py  settings.py  workflow.py
src/depotbutler/db/: __init__.py  mongodb.py  mongodb.py.backup
src/depotbutler/mailer/: __init__.py  composers.py  service.py  templates.py
src/depotbutler/observability/: __init__.py  correlation.py  metrics.py
src/depotbutler/onedrive/: __init__.py  auth.py  folder_manager.py  service.py
src/depotbutler/services/: __init__.py  blob_storage_service.py  cookie_checker.py  discovery_service.py  (+7 more)
tests/: __init__.py  conftest.py  test_blob_archival.py  test_blob_storage_service.py  test_client.py  test_config_repository.py  test_discovery_sync.py  test_edition_repository.py  test_edition_tracker.py  test_helpers.py  test_httpx_client.py  test_mailer.py  test_main.py  test_manage_recipient_preferences.py  test_mongodb.py  test_notification_archival.py  test_notification_emails.py  test_observability_correlation.py  test_observability_metrics.py  test_onedrive.py  test_onedrive_delivery_service.py  test_onedrive_multi_upload.py  test_publication_repository.py  test_publication_statistics.py  test_publications.py  test_recipient_filtering_integration.py  test_recipient_preferences.py  test_recipient_repository.py  test_timestamp_tracking.py  test_workflow_error_paths.py  test_workflow_integration.py  test_workflow_multi_publication.py
tests/fixtures/: __init__.py  workflow_fixtures.py
tests/helpers/: __init__.py  workflow_setup.py
(+8 files in other folders)
