[project]
name = "depot-butler"
version = "0.1.0"
description = "Automated Megatrend Depot Downloader and Distribution Mailer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.1",
    "azure-keyvault-secrets>=4.10.0",
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "motor>=3.6.0",
    "msal>=1.34.0",
    "pydantic[email]>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv[cli]>=1.1.1",
]
authors = [
    { name = "Stefan Fries",  email = "stefan.fries.burgdorf@gmx.de" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
depot-butler = "depotbutler.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
# Type checking configuration for Pylance
typeCheckingMode = "standard"
pythonVersion = "3.13"
exclude = [
    "**/__pycache__",
    ".venv",
    "data",
    "downloaded_files"
]
reportMissingImports = true
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
