# yaml-language-server: $schema=https://json.schemastore.org/pyproject.json
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "depot-butler"
version = "0.1.0"
description = "Automated Megatrend Depot Downloader and Distribution Mailer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.1",
    "azure-keyvault-secrets>=4.10.0",
    "beautifulsoup4>=4.14.2",
    "httpx>=0.28.1",
    "motor>=3.6.0",
    "msal>=1.34.0",
    "pydantic[email]>=2.12.3",
    "pydantic-settings>=2.11.0",
    "azure-storage-blob>=12.27.1",
    "yfinance>=1.0",
    "pdfplumber>=0.11.8",
]
authors = [
    { name = "Stefan Fries",  email = "stefan.fries.burgdorf@gmx.de" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "pytest-env>=1.1.5",
    "radon>=6.0.1",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
depot-butler = "depotbutler.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
# Type checking configuration for Pylance
typeCheckingMode = "standard"
pythonVersion = "3.13"
extraPaths = ["src"]
exclude = [
    "**/__pycache__",
    ".venv",
    "data",
    "downloaded_files"
]
reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["tests/"]

[tool.pytest.ini_options]
# Test configuration
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
# Exclude scripts directory from test collection
norecursedirs = ["scripts", ".git", ".venv", "data", "htmlcov"]
# Add markers
markers = [
    "integration: marks tests as integration tests (require external services like MongoDB)",
    "slow: marks tests as slow running",
]
# By default, skip integration tests
addopts = "-v -m 'not integration'"
# Set UTF-8 encoding for console output (fixes emoji rendering on Windows)
env = [
    "PYTHONIOENCODING=utf-8"
]
